--- a/roku/style.css
+++ b/roku/style.css
@@ -1,6 +1,46 @@
 body {
     background-color: #555555;
+    
 }
+
+#menu {
+    list-style-type: none;
+    overflow: hidden;
+    margin: 0 0 5 0;
+    padding: 0;
+    border-radius: 25px;
+    border: 1px solid black;
+    background-color: #222222;
+    display: inline-block;
+    color: #DDDDDD;
+}
+
+#menu li {
+    float:left;
+}
+
+#menu li label {
+    background-color: #222222;
+    display: block;
+    padding:14px 16px;
+
+    
+}
+
+#menu li label:hover {
+    background-color: blueviolet;
+}
+
+
+#menu li input[type=checkbox] {
+    display: none;
+}
+
+#menu li input[type=checkbox]:checked ~ label {
+    background-color: blueviolet;
+}
+
+
 .interface {
     background-color: #222222;
     width: 200;
@@ -8,7 +48,13 @@ body {
     border-radius: 25px;
     padding: 3px;
     margin: 1px;
+    color: #DDDDDD;
 }
+
+.config {
+    width: 400;
+}
+
 
 .int-row {
     text-align: center;
@@ -32,6 +78,10 @@ body {
     background-color: blueviolet;
 }
 
+.button:active {
+    background-color: #7A1BD2;
+}
+
 .button i {
     font-size: 36px;
 }
@@ -46,7 +96,67 @@ body {
     border-color: blueviolet;
 }
 
+.appbtn:active {
+    border-color: #7A1BD2;
+}
+
 .button img {
     height: 36px;
     
 }
+
+.btn-mac {
+    width: 180px;
+    height: unset;
+}
+
+.std-btn {
+    width: unset;
+    height: unset;
+}
+
+input[type=text] {
+    color: #DDDDDD;
+    background-color: #222222;
+    border: none;
+    border-bottom: 2px solid #DDDDDD;
+    text-align: center;
+}
+
+.favnum {
+    width: 80px;
+    margin-left: 5px;
+    margin-right: 30px;
+}
+
+#text_input {
+    background-color: DDDDDD;
+    margin-bottom: 5px;
+}
+
+a {
+    color: #FFFFFF;
+    padding: 10px;
+    text-decoration-line: none;
+}
+
+a:hover {
+    color: blueviolet;
+}
+
+.section {
+    padding-bottom: 15px;
+}
+
+#ipaddr {
+    width: 130px;
+}
+
+#port {
+    width: 50px
+}
+
+.hidden {
+    display: none;
+}
+
